--- a/Makefile-Wine-64-32
+++ b/Makefile-Wine-64-32
@@ -11,7 +11,7 @@ PREFIX  = /usr
 BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
-BUILD_FLAGS  = -fPIC -O2 -DAMT -DVST32 $(CXX_FLAGS)
+BUILD_FLAGS  = -fPIC -O2 -DVST6432 -DAMT -DVST32 $(CXX_FLAGS)
 BUILD_FLAGS_WIN = -m64 -O2 -DAMT -I/usr/include/wine-development/windows
 BUILD_FLAGS_WIN32 = -m32 -O2 -DAMT -I/usr/include/wine-development/windows
 
