--- a/Makefile-embed
+++ b/Makefile-embed
@@ -12,7 +12,7 @@ BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
 BUILD_FLAGS  = -fPIC -O2 -DAMT -DEMBED $(CXX_FLAGS)
-BUILD_FLAGS_WIN = -m64 -O2 -DAMT -DEMBED -I/usr/include/wine-development/windows
+BUILD_FLAGS_WIN = -m64 -O2 -DAMT -DEMBED -I/usr/include/wine-development/windows $(CXX_FLAGS)
 
 LINK_FLAGS   = $(LDFLAGS)
 
