--- a/Makefile-embed6432
+++ b/Makefile-embed6432
@@ -12,8 +12,8 @@ BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
 BUILD_FLAGS  = -fPIC -O2 -DVST6432 -DAMT -DEMBED $(CXX_FLAGS)
-BUILD_FLAGS_WIN = -m64 -O2 -DAMT -DEMBED -I/usr/include/wine-development/windows
-BUILD_FLAGS_WIN32 = -m32 -O2 -DAMT -DEMBED -I/usr/include/wine-development/windows
+BUILD_FLAGS_WIN = -m64 -O2 -DAMT -DEMBED -I/usr/include/wine-development/windows $(CXX_FLAGS)
+BUILD_FLAGS_WIN32 = -m32 -O2 -DAMT -DEMBED -I/usr/include/wine-development/windows $(CXX_FLAGS)
 
 LINK_FLAGS   = $(LDFLAGS)
 
