--- a/Makefile-embed6432-rt
+++ b/Makefile-embed6432-rt
@@ -11,9 +11,9 @@ PREFIX  = /usr
 BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
-BUILD_FLAGS  = -fPIC -O2 -DVST6432 -DAMT -DEMBED -DLVRT $(CXX_FLAGS)
-BUILD_FLAGS_WIN = -m64 -O2 -DAMT -DEMBED -I/usr/include/wine-development/windows
-BUILD_FLAGS_WIN32 = -m32 -O2 -DAMT -DEMBED -I/usr/include/wine-development/windows
+BUILD_FLAGS  = -fPIC -O2 -DVST6432 -DAMT -DEMBED -DRINGB -DLVRT $(CXX_FLAGS)
+BUILD_FLAGS_WIN = -m64 -O2 -DAMT -DEMBED -DRINGB -I/usr/include/wine-development/windows
+BUILD_FLAGS_WIN32 = -m32 -O2 -DAMT -DEMBED -DRINGB -I/usr/include/wine-development/windows
 
 LINK_FLAGS   = $(LDFLAGS)
 
