--- a/Makefile6432
+++ b/Makefile6432
@@ -11,9 +11,9 @@ PREFIX  = /usr
 BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
-BUILD_FLAGS  = -fPIC -O2 -DVST6432 -DAMT $(CXX_FLAGS)
-BUILD_FLAGS_WIN = -m64 -O2 -DAMT -I/usr/include/wine-development/windows
-BUILD_FLAGS_WIN32 = -m32 -O2 -DAMT -I/usr/include/wine-development/windows
+BUILD_FLAGS  = -fPIC -O2 -DVST6432 -DAMT -DRINGB $(CXX_FLAGS)
+BUILD_FLAGS_WIN = -m64 -O2 -DAMT -DRINGB -I/usr/include/wine-development/windows
+BUILD_FLAGS_WIN32 = -m32 -O2 -DAMT -DRINGB -I/usr/include/wine-development/windows
 
 LINK_FLAGS   = $(LDFLAGS)
 
