--- a/Makefile-embed6432
+++ b/Makefile-embed6432
@@ -27,13 +27,13 @@ TARGETS     = linvst.so lin-vst-server.exe lin-vst-server32.exe
 
 all: $(TARGETS)
 
-linvst.so: linvst.unix.o remotevstclient.unix.o remotepluginclient.unix.o rdwrops.unix.o paths.unix.o
+linvst.so: linvst.unix.o remotevstclient.unix.o remotepluginclient.unix.o paths.unix.o
 	$(CXX) $^ $(LINK_PLUGIN) -o $@
 	
-lin-vst-server.exe: lin-vst-server.wine.o remotepluginserver.wine.o rdwrops.wine.o paths.wine.o
+lin-vst-server.exe: lin-vst-server.wine.o remotepluginserver.wine.o paths.wine.o
 	$(WINECXX) -m64 $^ $(LINK_WINE) -o $@
 
-lin-vst-server32.exe: lin-vst-server.wine32.o remotepluginserver.wine32.o rdwrops.wine32.o paths.wine32.o
+lin-vst-server32.exe: lin-vst-server.wine32.o remotepluginserver.wine32.o paths.wine32.o
 	$(WINECXX) -m32 $^ $(LINK_WINE32) -o $@
 
 # --------------------------------------------------------------
@@ -45,9 +45,6 @@ remotevstclient.unix.o: remotevstclient.cpp
 	$(CXX) $(BUILD_FLAGS) -c $^ -o $@
 	
 remotepluginclient.unix.o: remotepluginclient.cpp
-	$(CXX) $(BUILD_FLAGS) -c $^ -o $@
-
-rdwrops.unix.o: rdwrops.cpp
 	$(CXX) $(BUILD_FLAGS) -c $^ -o $@
 
 paths.unix.o: paths.cpp
@@ -62,9 +59,6 @@ lin-vst-server.wine.o: lin-vst-server.cpp
 remotepluginserver.wine.o: remotepluginserver.cpp
 	$(WINECXX) $(BUILD_FLAGS_WIN) -c $^ -o $@
 
-rdwrops.wine.o: rdwrops.cpp
-	$(WINECXX) $(BUILD_FLAGS_WIN) -c $^ -o $@
-
 paths.wine.o: paths.cpp
 	$(WINECXX) $(BUILD_FLAGS_WIN) -c $^ -o $@
 
@@ -74,12 +68,8 @@ lin-vst-server.wine32.o: lin-vst-server.cpp
 remotepluginserver.wine32.o: remotepluginserver.cpp
 	$(WINECXX) $(BUILD_FLAGS_WIN32) -c $^ -o $@
 
-rdwrops.wine32.o: rdwrops.cpp
-	$(WINECXX) $(BUILD_FLAGS_WIN32) -c $^ -o $@
-
 paths.wine32.o: paths.cpp
 	$(WINECXX) $(BUILD_FLAGS_WIN32) -c $^ -o $@
-
 
 
 clean:
