--- a/Makefile-noembed
+++ b/Makefile-noembed
@@ -11,7 +11,7 @@ PREFIX  = /usr
 BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
-BUILD_FLAGS  = -fPIC -O2 -DAMT -DRINGB $(CXX_FLAGS)
+BUILD_FLAGS  = -fPIC -O2 -DAMT -DRINGB -DLVRT $(CXX_FLAGS)
 BUILD_FLAGS_WIN = -m64 -O2 -DAMT -DRINGB -I/usr/include/wine-development/windows
 
 LINK_FLAGS   = $(LDFLAGS)
