--- a/Makefile-embed
+++ b/Makefile-embed
@@ -11,7 +11,7 @@ PREFIX  = /usr
 BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
-BUILD_FLAGS  = -fPIC -O2 -DEMBED -DLVRT -DSEM $(CXX_FLAGS)
+BUILD_FLAGS  = -fPIC -O2 -DEMBED -DEMBEDTHREAD -DLVRT -DSEM $(CXX_FLAGS)
 BUILD_FLAGS_WIN = -m64 -O2 -DEMBED -DSEM -I/usr/include/wine-development/windows
 
 LINK_FLAGS   = $(LDFLAGS)
