--- a/Makefile-noembed-6432-ontop
+++ b/Makefile-noembed-6432-ontop
@@ -12,8 +12,8 @@ BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
 BUILD_FLAGS  = -fPIC -O2 -DVST6432 -DLVRT -DSEM $(CXX_FLAGS)
-BUILD_FLAGS_WIN = -m64 -O2 -DSEM -DWINONTOP -I/usr/include/wine-development/windows
-BUILD_FLAGS_WIN32 = -m32 -O2 -DSEM -DWINONTOP -I/usr/include/wine-development/windows
+BUILD_FLAGS_WIN = -m64 -O2 -DSEM -DDRAG -DWINONTOP -I/usr/include/wine-development/windows
+BUILD_FLAGS_WIN32 = -m32 -O2 -DSEM -DDRAG -DWINONTOP -I/usr/include/wine-development/windows
 
 LINK_FLAGS   = $(LDFLAGS)
 
