--- a/Makefile-embed-drag
+++ b/Makefile-embed-drag
@@ -11,7 +11,8 @@ PREFIX  = /usr
 BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
-BUILD_FLAGS  = -fPIC -O2 -DEMBED -DEMBEDTHREAD -DLVRT -DSEM -DEMBEDDRAG $(CXX_FLAGS)
+BUILD_FLAGS  = -fPIC -O2 -DEMBED -DLVRT -DSEM -DEMBEDDRAG $(CXX_FLAGS)
+# add -DEMBEDTHREAD to above line for Ubuntu 14.04
 BUILD_FLAGS_WIN = -m64 -O2 -DEMBED -DSEM -DEMBEDDRAG -I/usr/include/wine-development/windows
 
 LINK_FLAGS   = $(LDFLAGS)
