--- a/Makefile-embed-6432
+++ b/Makefile-embed-6432
@@ -11,11 +11,11 @@ PREFIX  = /usr
 BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
-BUILD_FLAGS  = -fPIC -O2 -DVST6432 -DEMBED -DLVRT -DSEM -DEMBEDDRAG $(CXX_FLAGS)
+BUILD_FLAGS  = -fPIC -O2 -DVST6432 -DEMBED -DLVRT -DSEM -DEMBEDDRAG -DWAVES $(CXX_FLAGS)
 # add -DEMBEDTHREAD to the above line for display problems (older systems), add -DEMBEDRESIZE to the above line for window resizing
-BUILD_FLAGS_WIN = -m64 -O2 -DEMBED -DSEM -DEMBEDDRAG -I/usr/include/wine-development/windows
+BUILD_FLAGS_WIN = -m64 -O2 -DEMBED -DSEM -DEMBEDDRAG -DWAVES -I/usr/include/wine-development/windows
 # add -DEMBEDRESIZE to the above line for window resizing
-BUILD_FLAGS_WIN32 = -m32 -O2 -DEMBED -DSEM -DEMBEDDRAG -I/usr/include/wine-development/windows
+BUILD_FLAGS_WIN32 = -m32 -O2 -DEMBED -DSEM -DEMBEDDRAG -DWAVES -I/usr/include/wine-development/windows
 # add -DEMBEDRESIZE to the above line for window resizing
 
 LINK_FLAGS   = $(LDFLAGS)
