--- a/Tracktion/Makefile-embed-6432
+++ b/Tracktion/Makefile-embed-6432
@@ -83,5 +83,5 @@ install:
 	install -d $(BIN_DIR)
 	install -d $(VST_DIR)
 	install -m 755 linvst.so $(VST_DIR)
-	install -m 755 lin-vst-server.exe lin-vst-servertrack.exe.so $(BIN_DIR)
-	install -m 755 lin-vst-server32.exe lin-vst-servertrack32.exe.so $(BIN_DIR)
+	install -m 755 lin-vst-servertrack.exe lin-vst-servertrack.exe.so $(BIN_DIR)
+	install -m 755 lin-vst-servertrack32.exe lin-vst-servertrack32.exe.so $(BIN_DIR)
