--- a/Tracktion/Makefile-standalone-64
+++ b/Tracktion/Makefile-standalone-64
@@ -67,4 +67,4 @@ install:
 	install -d $(BIN_DIR)
 	install -d $(VST_DIR)
 	install -m 755 linvst.so $(VST_DIR)
-	install -m 755 lin-vst-serverst.exe lin-vst-servertrackst.exe.so $(BIN_DIR)
+	install -m 755 lin-vst-servertrackst.exe lin-vst-servertrackst.exe.so $(BIN_DIR)
