--- a/Tracktion/Makefile-standalone-6432
+++ b/Tracktion/Makefile-standalone-6432
@@ -82,5 +82,5 @@ install:
 	install -d $(BIN_DIR)
 	install -d $(VST_DIR)
 	install -m 755 linvst.so $(VST_DIR)
-	install -m 755 lin-vst-serverst.exe lin-vst-servertrackst.exe.so $(BIN_DIR)
-	install -m 755 lin-vst-serverst32.exe lin-vst-servertrackst32.exe.so $(BIN_DIR)
+	install -m 755 lin-vst-servertrackst.exe lin-vst-servertrackst.exe.so $(BIN_DIR)
+	install -m 755 lin-vst-servertrackst32.exe lin-vst-servertrackst32.exe.so $(BIN_DIR)
