--- a/Makefile-standalone-64
+++ b/Makefile-standalone-64
@@ -11,7 +11,7 @@ PREFIX  = /usr
 BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
-BUILD_FLAGS  = -fPIC -O2 -DLVRT -DSEM -DWAVES $(CXX_FLAGS)
+BUILD_FLAGS  = -fPIC -O2 -DSEM -DWAVES $(CXX_FLAGS)
 BUILD_FLAGS_WIN = -m64 -O2 -DSEM -DDRAG -DWINONTOP -DWAVES -DWAVESLOOP -I/usr/include/wine-development/windows
 
 # undefine WINONTOP for standard window behaviour
