--- a/32bitonly/Makefile-embed-32
+++ b/32bitonly/Makefile-embed-32
@@ -13,7 +13,7 @@ VST_DIR = ./vst
 
 BUILD_FLAGS  = -fPIC -O2 -DLVRT -DEMBED -DVST32 -DEMBEDDRAG -DWAVES -DVESTIGE $(CXX_FLAGS)
 # -DFOCUS to the above line for alternative keyboard focus operation, add -DEMBEDRESIZE to the above line for window resizing
-BUILD_FLAGS_WIN = -m32 -O2 -DEMBED -DEMBEDDRAG -DWAVES -DWAVESLOOP -DVESTIGE -I/usr/include/wine-development/windows -I/usr/include/wine/wine/windows
+BUILD_FLAGS_WIN = -m32 -O2 -DEMBED -DEMBEDDRAG -DWAVES -DWAVESLOOP -DVESTIGE -I/usr/include/wine-development/windows -I/usr/include/wine-development/wine/windows -I/usr/include/wine/wine/windows
 # add -DEMBEDRESIZE to the above line for window resizing
 
 LINK_FLAGS   = $(LDFLAGS)
