Small library fixes.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,7 @@ SET(CPACK_SOURCE_PACKAGE_FILE_NAME "${CMAKE_PROJECT_NAME}_${MAJOR_VERSION}.${MIN
 
  
 #dependencies for this service menu
-SET(CPACK_DEBIAN_PACKAGE_DEPENDS "wine-stable")
+#SET(CPACK_DEBIAN_PACKAGE_DEPENDS "wine-stable")
  
 SET(CPACK_DEBIAN_PACKAGE_PRIORITY "optional")
 SET(CPACK_DEBIAN_PACKAGE_SECTION "audio")
