--- a/liblinvst/CMakeLists.txt
+++ b/liblinvst/CMakeLists.txt
@@ -26,4 +26,5 @@ set( LINVST_SO_SRC SHARED
 
 add_library(linvst ${LINVST_SO_SRC} )
 set_target_properties(linvst PROPERTIES PREFIX "")
+target_link_libraries( linvst pthread dl X11 rt )
 install( TARGETS linvst DESTINATION share/LinVst )
