--- a/Makefile-standalone-6432
+++ b/Makefile-standalone-6432
@@ -19,7 +19,7 @@ BUILD_FLAGS_WIN32 = -m32 -O2 -DVST6432 -DDRAG -DWINONTOP -DWAVES -DWAVESLOOP -DV
 
 LINK_FLAGS   = $(LDFLAGS)
 
-LINK_PLUGIN = -shared -lpthread -ldl -lrt $(LINK_FLAGS)
+LINK_PLUGIN = -shared -lpthread -ldl -lX11 -lrt $(LINK_FLAGS)
 LINK_WINE   = -L/usr/lib/x86_64-linux-gnu/wine-development -lpthread -lrt $(LINK_FLAGS)
 LINK_WINE32   = -L/usr/lib/i386-linux-gnu/wine-development -lpthread -lrt $(LINK_FLAGS)
 
