--- a/32bitonly/liblinvst/CMakeLists.txt
+++ b/32bitonly/liblinvst/CMakeLists.txt
@@ -4,7 +4,7 @@
 SET(STATIC_LINKING FALSE )
 
 set( CMAKE_CXX_STANDARD 14 )
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -fPIC -O2 -DLVRT -DEMBED -DVST32 -DEMBEDDRAG -DWAVES -DVESTIGE ")
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pipe -fPIC -O2 -DLVRT -DEMBED -DEMBEDDRAG -DWAVES -DVESTIGE -DXECLOSE -DNEWTIME ")
 
 # Project Path.
 ###############
