--- a/32bitonly/exelinvst/CMakeLists.txt
+++ b/32bitonly/exelinvst/CMakeLists.txt
@@ -63,5 +63,5 @@ add_executable( lin-vst-server32lx.exe  ${LINVST_SVR_SRC} )
 set_target_properties( lin-vst-server32lx.exe PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS}  -m32 -O2 -DEMBED -DEMBEDDRAG -DWAVES -DVESTIGE -DXECLOSE -DWCLASS -DNEWTIME" )
 target_link_libraries( lin-vst-server32lx.exe pthread rt )
 
-install( TARGETS  lin-vst-serverlx32.exe DESTINATION bin )
-install(FILES  ${PROJECT_BINARY_DIR}/bin/lin-vst-serverlx32.exe.so  DESTINATION bin)
+install( TARGETS  lin-vst-server32lx.exe DESTINATION bin )
+install(FILES  ${PROJECT_BINARY_DIR}/bin/lin-vst-server32lx.exe.so  DESTINATION bin)
