--- a/64bitsonly/exelinvst/CMakeLists.txt
+++ b/64bitsonly/exelinvst/CMakeLists.txt
@@ -65,17 +65,11 @@ set( CMAKE_CXX_STANDARD 14 )
 include_directories( ${WIN_INCLUDE} )
 
 add_executable( lin-vst-servertrack.exe ${LINVST_SVR_SRC} )
-set_target_properties(  lin-vst-servertrack.exe PROPERTIES COMPILE_FLAGS " ${CMAKE_CXX_FLAGS} -m64 -fPIC -O2 -DVST6432 -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -DVESTIGE -DXECLOSE -DWCLASS -DNEWTIME" )
+set_target_properties(  lin-vst-servertrack.exe PROPERTIES COMPILE_FLAGS " ${CMAKE_CXX_FLAGS} -m64 -fPIC -O2 -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -DVESTIGE -DXECLOSE -DWCLASS -DNEWTIME" )
 target_link_libraries( lin-vst-servertrack.exe pthread rt )
-
-
-#add_executable( lin-vst-servertrack32.exe ${LINVST_SVR_SRC} )
-#set_target_properties( lin-vst-servertrack32.exe PROPERTIES COMPILE_FLAGS "${CMAKE_CXX_FLAGS} -m32 -fPIC -O2 -DVST6432 -DEMBED -DEMBEDDRAG -DWAVES -DTRACKTIONWM -DVESTIGE -DXECLOSE -DWCLASS -DNEWTIME" )
-#target_link_libraries( lin-vst-servertrack32.exe pthread rt )
 
 install( TARGETS
   lin-vst-servertrack.exe  
-  #lin-vst-servertrack32.exe
   DESTINATION bin )
 
 install(FILES  ${CMAKE_CURRENT_BINARY_DIR}/bin/lin-vst-servertrack.exe.so  DESTINATION bin)
