--- a/deb-packages/32bitonly/liblinvst/CMakeLists.txt
+++ b/deb-packages/32bitonly/liblinvst/CMakeLists.txt
@@ -24,8 +24,8 @@ set( LINVST_SO_SRC SHARED
   ../../../paths.cpp
   )
 
-add_library(linvst-i386 ${LINVST_SO_SRC} )
-set_target_properties(linvst-i386 PROPERTIES PREFIX "")
-target_link_libraries( linvst-i386 pthread dl X11 rt )
+add_library(linvst ${LINVST_SO_SRC} )
+set_target_properties(linvst PROPERTIES PREFIX "")
+target_link_libraries( linvst pthread dl X11 rt )
 
-install( TARGETS linvst-i386 DESTINATION share/LinVst )
+install( TARGETS linvst-i386 DESTINATION share/LinVst/32bit )
