--- a/deb-packages/64bitsonly/liblinvst/CMakeLists.txt
+++ b/deb-packages/64bitsonly/liblinvst/CMakeLists.txt
@@ -27,4 +27,4 @@ set( LINVST_SO_SRC SHARED
 add_library(linvst ${LINVST_SO_SRC} )
 set_target_properties(linvst PROPERTIES PREFIX "")
 target_link_libraries( linvst pthread dl X11 rt )
-install( TARGETS linvst DESTINATION share/LinVst )
+install( TARGETS linvst DESTINATION share/LinVst/64bit )
