--- a/deb-packages/64bits-32bits/CMakeLists.txt
+++ b/deb-packages/64bits-32bits/CMakeLists.txt
@@ -20,7 +20,12 @@ add_subdirectory( exelinvst )
 install(FILES ../convert/pylinvstconvert-64bit-32bit DESTINATION ${SCRIPT1_INSTALL_PATH} bin
       PERMISSIONS OWNER_EXECUTE OWNER_READ
       GROUP_EXECUTE GROUP_READ
-      WORLD_EXECUTE WORLD_READ )		  
+      WORLD_EXECUTE WORLD_READ )	
+      
+install(FILES ./pylinvstconvert-64bit-32bit-batch DESTINATION ${SCRIPT1_INSTALL_PATH} bin
+      PERMISSIONS OWNER_EXECUTE OWNER_READ
+      GROUP_EXECUTE GROUP_READ
+      WORLD_EXECUTE WORLD_READ )	        
 
 #-----------------------------------------------------------------
 # CPack configuration.
