--- a/deb-packages/64bits-32bits/CMakeLists.txt
+++ b/deb-packages/64bits-32bits/CMakeLists.txt
@@ -22,6 +22,16 @@ install(FILES ../convert/pylinvstconvert-64bit-32bit DESTINATION ${SCRIPT1_INSTA
       GROUP_EXECUTE GROUP_READ
       WORLD_EXECUTE WORLD_READ )	
       
+install(FILES ../convert/linvstconvert64bit/linvstconvert DESTINATION ${SCRIPT1_INSTALL_PATH} bin
+      PERMISSIONS OWNER_EXECUTE OWNER_READ
+      GROUP_EXECUTE GROUP_READ
+      WORLD_EXECUTE WORLD_READ )  
+      
+install(FILES ../convert/linvstconvert64bit/linvstconverttree DESTINATION ${SCRIPT1_INSTALL_PATH} bin
+      PERMISSIONS OWNER_EXECUTE OWNER_READ
+      GROUP_EXECUTE GROUP_READ
+      WORLD_EXECUTE WORLD_READ )        
+      
 install(FILES ./pylinvstconvert-64bit-32bit-batch DESTINATION ${SCRIPT1_INSTALL_PATH} bin
       PERMISSIONS OWNER_EXECUTE OWNER_READ
       GROUP_EXECUTE GROUP_READ
