--- a/deb-packages/32bitonly/CMakeLists.txt
+++ b/deb-packages/32bitonly/CMakeLists.txt
@@ -37,7 +37,7 @@ install(FILES ./pylinvstconvert-32bit-batch DESTINATION ${SCRIPT1_INSTALL_PATH} 
       GROUP_EXECUTE GROUP_READ
       WORLD_EXECUTE WORLD_READ )	
       
-install(FILES ../Readme DESTINATION ${SCRIPT1_INSTALL_PATH} share/LinVst/32bit
+install(FILES ../Readme DESTINATION ${SCRIPT1_INSTALL_PATH} share/LinVst
       PERMISSIONS OWNER_READ
       GROUP_READ
       WORLD_READ )	       
