--- a/deb-packages/64bits-32bits/CMakeLists.txt
+++ b/deb-packages/64bits-32bits/CMakeLists.txt
@@ -37,7 +37,7 @@ install(FILES ./pylinvstconvert-64bit-32bit-batch DESTINATION ${SCRIPT1_INSTALL_
       GROUP_EXECUTE GROUP_READ
       WORLD_EXECUTE WORLD_READ )
       
-install(FILES ../Readme DESTINATION ${SCRIPT1_INSTALL_PATH} share/LinVst/64bit-32bit
+install(FILES ../Readme DESTINATION ${SCRIPT1_INSTALL_PATH} share/LinVst
       PERMISSIONS OWNER_READ
       GROUP_READ
       WORLD_READ )	       
