--- a/32bitonly/Makefile-standalone-32
+++ b/32bitonly/Makefile-standalone-32
@@ -11,8 +11,8 @@ PREFIX  = /usr
 BIN_DIR    = $(DESTDIR)$(PREFIX)/bin
 VST_DIR = ./vst
 
-BUILD_FLAGS  = -fPIC -O2 -DLVRT -DVST32 -DWAVES -DVESTIGE -DNEWTIME $(CXX_FLAGS)
-BUILD_FLAGS_WIN = -m32 -O2 -DVST32 -DDRAG -DWINONTOP -DWAVES -DVESTIGE -DWCLASS -DNEWTIME -I/usr/include/wine-development/windows -I/usr/include/wine-development/wine/windows -I/usr/include/wine/wine/windows
+BUILD_FLAGS  = -fPIC -O2 -DLVRT -DVST32 -DWAVES -DVESTIGE -DNEWTIME -DINOUTMEM $(CXX_FLAGS)
+BUILD_FLAGS_WIN = -m32 -O2 -DVST32 -DDRAG -DWINONTOP -DWAVES -DVESTIGE -DWCLASS -DNEWTIME -DINOUTMEM -I/usr/include/wine-development/windows -I/usr/include/wine-development/wine/windows -I/usr/include/wine/wine/windows
 
 # undefine WINONTOP for standard window behaviour
 
