--- a/deb-packages/64bits-32bits/CMakeLists.txt
+++ b/deb-packages/64bits-32bits/CMakeLists.txt
@@ -22,10 +22,10 @@ install(FILES ../convert/linvstconvert6432 DESTINATION ${SCRIPT1_INSTALL_PATH} b
       GROUP_EXECUTE GROUP_READ
       WORLD_EXECUTE WORLD_READ )	
 
-install(FILES ../convert/pylinvstconvert-64bit-32bit DESTINATION ${SCRIPT1_INSTALL_PATH} bin
-      PERMISSIONS OWNER_EXECUTE OWNER_READ
-      GROUP_EXECUTE GROUP_READ
-      WORLD_EXECUTE WORLD_READ )	
+# install(FILES ../convert/pylinvstconvert-64bit-32bit DESTINATION ${SCRIPT1_INSTALL_PATH} bin
+#      PERMISSIONS OWNER_EXECUTE OWNER_READ
+#      GROUP_EXECUTE GROUP_READ
+#      WORLD_EXECUTE WORLD_READ )	
       
 install(FILES ../convert/linvstconvert64bit/linvstconvert DESTINATION ${SCRIPT1_INSTALL_PATH} bin
       PERMISSIONS OWNER_EXECUTE OWNER_READ
@@ -37,10 +37,10 @@ install(FILES ../convert/linvstconvert64bit/linvstconverttree DESTINATION ${SCRI
       GROUP_EXECUTE GROUP_READ
       WORLD_EXECUTE WORLD_READ )        
       
-install(FILES ./pylinvstconvert-64bit-32bit-batch DESTINATION ${SCRIPT1_INSTALL_PATH} bin
-      PERMISSIONS OWNER_EXECUTE OWNER_READ
-      GROUP_EXECUTE GROUP_READ
-      WORLD_EXECUTE WORLD_READ )
+# install(FILES ./pylinvstconvert-64bit-32bit-batch DESTINATION ${SCRIPT1_INSTALL_PATH} bin
+#      PERMISSIONS OWNER_EXECUTE OWNER_READ
+#      GROUP_EXECUTE GROUP_READ
+#      WORLD_EXECUTE WORLD_READ )
       
 install(FILES ../Readme DESTINATION ${SCRIPT1_INSTALL_PATH} share/LinVst
       PERMISSIONS OWNER_READ
